--- a/angular.json
+++ b/angular.json
@@ -15,6 +15,8 @@
           "options": {
             "outputPath": "dist/pet-hospiyal-uifinall",
             "index": "src/index.html",
+            "baseHref": "/PetHospiyalUIFinall/",
+
             "browser": "src/main.ts",
             "polyfills": [
               "zone.js"
@@ -95,6 +97,9 @@
             ],
             "scripts": []
           }
+        },
+        "deploy": {
+          "builder": "angular-cli-ghpages:deploy"
         }
       }
     }
